# swash

./: .clippy.toml  .gitignore  .typos.toml  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: shape_benches.rs
examples/: minimal.rs
examples/assets/Roboto/: README.md
src/: attributes.rs  cache.rs  charmap.rs  font.rs  ident.rs  lib.rs  macros.rs  metrics.rs  palette.rs  setting.rs  strike.rs  string.rs  variation.rs
src/feature/: aat.rs  at.rs  mod.rs  util.rs
src/internal/: aat.rs  at.rs  cmap.rs  fixed.rs  head.rs  mod.rs  parse.rs  var.rs  vorg.rs
src/scale/: color.rs  hinting_cache.rs  image.rs  mod.rs  outline.rs  proxy.rs
src/scale/bitmap/: mod.rs  png.rs
src/scale/cff/: cff.rs  hint.rs  mod.rs  outlines.rs
src/scale/cff2/: hint.rs  mod.rs  scaler.rs
src/scale/cff3/: mod.rs  outlines.rs
src/scale/glyf/: cache.rs  hint.rs  mod.rs  proxy.rs  scale.rs  var.rs
src/shape/: aat.rs  at.rs  buffer.rs  cache.rs  cluster.rs  engine.rs  mod.rs  partition.rs
src/text/: analyze.rs  compose.rs  lang.rs  mod.rs  unicode.rs  unicode_data.rs
src/text/cluster/: char.rs  cluster.rs  complex.rs  info.rs  mod.rs  myanmar.rs  parse.rs  simple.rs
tests/: aot.rs  aots.txt  harness.rs  in-house.rs  shaping.rs  shaping_impl.rs  text-rendering-tests.rs  text-rendering.rs
