[package]
name = "swash"
version = "0.1.19"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
edition = "2021"
description = "Font introspection, complex text shaping and glyph rendering."
license = "Apache-2.0 OR MIT"
keywords = ["font", "shape", "glyph", "text"]
categories = ["graphics", "text-processing"]
repository = "https://github.com/dfrg/swash"
homepage = "https://github.com/dfrg/swash"
readme = "README.md"

[features]
default = ["std", "scale", "render"]

libm = ["dep:core_maths", "skrifa/libm", "zeno/libm"]
std = ["skrifa/std", "zeno/std"]

scale = ["dep:yazi", "dep:zeno"]
render = ["scale", "zeno/eval"]

[lints]
clippy.doc_markdown = "warn"
clippy.semicolon_if_nothing_returned = "warn"

[dependencies]
core_maths = { version = "0.1.0", optional = true }
yazi = { version = "0.2.0", optional = true, default-features = false }
zeno = { version = "0.3.1", optional = true, default-features = false }
skrifa = { version = "0.24.1", default-features = false }
